antlr/coolParser.py
# Generated from C:/Users/rodol/OneDrive/Desktop/Proyecto/cool/antlr\cool.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class coolParser ( Parser ):

    grammarFileName = "cool.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'inherits'", "'{'", "'}'", "'('", 
                     "','", "')'", "':'", "'<-'", "'.'", "'@'", "'\\u00CB\\u0153'", 
                     "'*'", "'/'", "'+'", "'-'", "'<'", "'<='", "'='", "'not'", 
                     "'=>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "KLASS", "FI", "IF", "IN", 
                      "INHERITS", "ISVOID", "LET", "LOOP", "POOL", "THEN", 
                      "ELSE", "WHILE", "CASE", "ESAC", "NEW", "OF", "NOT", 
                      "TRUE", "FALSE", "TYPE", "ID", "INTEGER", "STRING", 
                      "COMMENT", "LINE_COMENT", "WS" ]

    RULE_program = 0
    RULE_klass = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4
    RULE_case_stat = 5
    RULE_let_decl = 6
    RULE_primary = 7

    ruleNames =  [ "program", "klass", "feature", "formal", "expr", "case_stat", 
                   "let_decl", "primary" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    KLASS=22
    FI=23
    IF=24
    IN=25
    INHERITS=26
    ISVOID=27
    LET=28
    LOOP=29
    POOL=30
    THEN=31
    ELSE=32
    WHILE=33
    CASE=34
    ESAC=35
    NEW=36
    OF=37
    NOT=38
    TRUE=39
    FALSE=40
    TYPE=41
    ID=42
    INTEGER=43
    STRING=44
    COMMENT=45
    LINE_COMENT=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def klass(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.KlassContext)
            else:
                return self.getTypedRuleContext(coolParser.KlassContext,i)


        def getRuleIndex(self):
            return coolParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = coolParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==coolParser.KLASS:
                self.state = 16
                self.klass()
                self.state = 17
                self.match(coolParser.T__0)
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KlassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KLASS(self):
            return self.getToken(coolParser.KLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(coolParser.TYPE)
            else:
                return self.getToken(coolParser.TYPE, i)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.FeatureContext)
            else:
                return self.getTypedRuleContext(coolParser.FeatureContext,i)


        def getRuleIndex(self):
            return coolParser.RULE_klass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKlass" ):
                listener.enterKlass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKlass" ):
                listener.exitKlass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKlass" ):
                return visitor.visitKlass(self)
            else:
                return visitor.visitChildren(self)




    def klass(self):

        localctx = coolParser.KlassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_klass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(coolParser.KLASS)
            self.state = 25
            self.match(coolParser.TYPE)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==coolParser.T__1:
                self.state = 26
                self.match(coolParser.T__1)
                self.state = 27
                self.match(coolParser.TYPE)


            self.state = 30
            self.match(coolParser.T__2)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==coolParser.ID:
                self.state = 31
                self.feature()
                self.state = 32
                self.match(coolParser.T__0)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(coolParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return coolParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Feature_attributeContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature_attribute" ):
                listener.enterFeature_attribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature_attribute" ):
                listener.exitFeature_attribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeature_attribute" ):
                return visitor.visitFeature_attribute(self)
            else:
                return visitor.visitChildren(self)


    class Feature_functionContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.FeatureContext
            super().__init__(parser)
            self._formal = None # FormalContext
            self.params = list() # of FormalContexts
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.FormalContext)
            else:
                return self.getTypedRuleContext(coolParser.FormalContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature_function" ):
                listener.enterFeature_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature_function" ):
                listener.exitFeature_function(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeature_function" ):
                return visitor.visitFeature_function(self)
            else:
                return visitor.visitChildren(self)



    def feature(self):

        localctx = coolParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = coolParser.Feature_functionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(coolParser.ID)
                self.state = 42
                self.match(coolParser.T__4)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==coolParser.ID:
                    self.state = 43
                    localctx._formal = self.formal()
                    localctx.params.append(localctx._formal)
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==coolParser.T__5:
                        self.state = 44
                        self.match(coolParser.T__5)
                        self.state = 45
                        localctx._formal = self.formal()
                        localctx.params.append(localctx._formal)
                        self.state = 50
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 53
                self.match(coolParser.T__6)
                self.state = 54
                self.match(coolParser.T__7)
                self.state = 55
                self.match(coolParser.TYPE)
                self.state = 56
                self.match(coolParser.T__2)
                self.state = 57
                self.expr(0)
                self.state = 58
                self.match(coolParser.T__3)
                pass

            elif la_ == 2:
                localctx = coolParser.Feature_attributeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(coolParser.ID)
                self.state = 61
                self.match(coolParser.T__7)
                self.state = 62
                self.match(coolParser.TYPE)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==coolParser.T__8:
                    self.state = 63
                    self.match(coolParser.T__8)
                    self.state = 64
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(coolParser.ID, 0)

        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def getRuleIndex(self):
            return coolParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = coolParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(coolParser.ID)
            self.state = 70
            self.match(coolParser.T__7)
            self.state = 71
            self.match(coolParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return coolParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class New_typeContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(coolParser.NEW, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNew_type" ):
                listener.enterNew_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNew_type" ):
                listener.exitNew_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNew_type" ):
                return visitor.visitNew_type(self)
            else:
                return visitor.visitChildren(self)


    class DispatchContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self._expr = None # ExprContext
            self.params = list() # of ExprContexts
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDispatch" ):
                listener.enterDispatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDispatch" ):
                listener.exitDispatch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDispatch" ):
                return visitor.visitDispatch(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)


    class Expr_primaryContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primary(self):
            return self.getTypedRuleContext(coolParser.PrimaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_primary" ):
                listener.enterExpr_primary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_primary" ):
                listener.exitExpr_primary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_primary" ):
                return visitor.visitExpr_primary(self)
            else:
                return visitor.visitChildren(self)


    class SumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSum" ):
                listener.enterSum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSum" ):
                listener.exitSum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum" ):
                return visitor.visitSum(self)
            else:
                return visitor.visitChildren(self)


    class Method_callContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self._expr = None # ExprContext
            self.params = list() # of ExprContexts
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_call" ):
                listener.enterMethod_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_call" ):
                listener.exitMethod_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_call" ):
                return visitor.visitMethod_call(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(coolParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(coolParser.LOOP, 0)
        def POOL(self):
            return self.getToken(coolParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class Less_or_equal_thanContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLess_or_equal_than" ):
                listener.enterLess_or_equal_than(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLess_or_equal_than" ):
                listener.exitLess_or_equal_than(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLess_or_equal_than" ):
                return visitor.visitLess_or_equal_than(self)
            else:
                return visitor.visitChildren(self)


    class ContentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContent" ):
                return visitor.visitContent(self)
            else:
                return visitor.visitChildren(self)


    class NotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class Case_ofContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CASE(self):
            return self.getToken(coolParser.CASE, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)

        def OF(self):
            return self.getToken(coolParser.OF, 0)
        def ESAC(self):
            return self.getToken(coolParser.ESAC, 0)
        def case_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.Case_statContext)
            else:
                return self.getTypedRuleContext(coolParser.Case_statContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCase_of" ):
                listener.enterCase_of(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCase_of" ):
                listener.exitCase_of(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCase_of" ):
                return visitor.visitCase_of(self)
            else:
                return visitor.visitChildren(self)


    class Is_voidContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(coolParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIs_void" ):
                listener.enterIs_void(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIs_void" ):
                listener.exitIs_void(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIs_void" ):
                return visitor.visitIs_void(self)
            else:
                return visitor.visitChildren(self)


    class WContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterW" ):
                listener.enterW(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitW" ):
                listener.exitW(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitW" ):
                return visitor.visitW(self)
            else:
                return visitor.visitChildren(self)


    class Less_thanContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLess_than" ):
                listener.enterLess_than(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLess_than" ):
                listener.exitLess_than(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLess_than" ):
                return visitor.visitLess_than(self)
            else:
                return visitor.visitChildren(self)


    class EqualsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquals" ):
                listener.enterEquals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquals" ):
                listener.exitEquals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquals" ):
                return visitor.visitEquals(self)
            else:
                return visitor.visitChildren(self)


    class Let_inContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(coolParser.LET, 0)
        def let_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.Let_declContext)
            else:
                return self.getTypedRuleContext(coolParser.Let_declContext,i)

        def IN(self):
            return self.getToken(coolParser.IN, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet_in" ):
                listener.enterLet_in(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet_in" ):
                listener.exitLet_in(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet_in" ):
                return visitor.visitLet_in(self)
            else:
                return visitor.visitChildren(self)


    class DivideContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivide" ):
                listener.enterDivide(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivide" ):
                listener.exitDivide(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivide" ):
                return visitor.visitDivide(self)
            else:
                return visitor.visitChildren(self)


    class MultiplyContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiply" ):
                listener.enterMultiply(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiply" ):
                listener.exitMultiply(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiply" ):
                return visitor.visitMultiply(self)
            else:
                return visitor.visitChildren(self)


    class If_elseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(coolParser.IF, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def THEN(self):
            return self.getToken(coolParser.THEN, 0)
        def ELSE(self):
            return self.getToken(coolParser.ELSE, 0)
        def FI(self):
            return self.getToken(coolParser.FI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_else" ):
                listener.enterIf_else(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_else" ):
                listener.exitIf_else(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_else" ):
                return visitor.visitIf_else(self)
            else:
                return visitor.visitChildren(self)


    class SubstractContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubstract" ):
                listener.enterSubstract(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubstract" ):
                listener.exitSubstract(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubstract" ):
                return visitor.visitSubstract(self)
            else:
                return visitor.visitChildren(self)


